crates/toml_edit/tests/snapshots/invalid/float/trailing-dot.stderr
TOML parse error at line 1, column 18
  |
1 | trailing-dot = 1.
  |                  ^
invalid fraction, expected digits
